# econosim

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  PHASES.md  PROJECT_LOG.md  README.md  dashboard.py  deep-research-report.md  docker-compose.yml  phases.md  project_log.md  pyproject.toml  requirements.txt  test_econosim.db  vercel.json
.github/workflows/: ci.yml
api/: database.py  main.py  requirements.txt
api/tests/: test_api_db.py
econosim/: __init__.py  __main__.py  parallel.py
econosim/agents/: __init__.py  bank.py  base.py  firm.py  government.py  household.py
econosim/calibration/: __init__.py  engine.py  moments.py  parameters.py
econosim/config/: __init__.py  schema.py
econosim/core/: __init__.py  accounting.py  contracts.py  goods.py
econosim/data/: __init__.py  analysis.py  pipelines.py
econosim/engine/: __init__.py  simulation.py
econosim/experiments/: __init__.py  runner.py
econosim/extensions/: __init__.py  bonds.py  expectations.py  multi_sector.py  networks.py  skilled_labor.py
econosim/forecasting/: __init__.py  backtesting.py  engine.py
econosim/forum/: __init__.py  (+1 more)
scenarios/: baseline.yaml  supply_shock.yaml
scripts/: compare_policies.py  train_agent.py  train_firm_rl.py  train_multiagent.py  tune_hyperparams.py
tests/: test_bonds.py  test_expectations.py  test_llm_agents.py  test_multi_sector.py  test_networks.py  test_parallel.py  test_policy_integration.py  test_policy_pipeline.py  test_rl_training.py  test_skilled_labor.py  test_stress.py  test_wiring_completion.py
web/: package-lock.json  package.json
(+87 files in other folders)
